# agi

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
.github/workflows/: cmake-multi-platform.yml
agi-ext/: CMakeLists.txt
agi-ext/AGI/: ImGuiLayer.cpp  ImGuiLayer.hpp  Window.cpp  Window.hpp
agi-ext/src/: ImGuiLayer.cpp  Window.cpp
examples/: CMakeLists.txt  hello_window.cpp  imgui.cpp  main.cpp  multiple_windows.cpp  reflection.cpp  square.cpp  text.cpp  texture.cpp  utils.hpp  vulkan.cpp  vulkan_example.cpp
include/: agipch.hpp
include/AGI/: Buffer.h  Buffer.hpp  Font.hpp  Framebuffer.h  Framebuffer.hpp  Log.hpp  RenderAPI.h  RenderAPI.hpp  RenderContext.hpp  ResourceBarrier.hpp  Settings.hpp  Shader.h  Shader.hpp  Texture.h  Texture.hpp  VertexArray.h  VertexArray.hpp  Window.hpp  agi.hpp
include/AGI/ext/: ImGuiLayer.hpp  Reflection.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  Font.cpp  Log.cpp  NativeWindow.cpp  RenderFactory.cpp  Utils.cpp  Window.cpp  agi.h  agipch.cpp  agipch.h  defines.h  stb_image.cpp
src/AGI/: Buffer.h  Framebuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  RenderAPI.h  RenderFactory.cpp  Shader.h  Texture.h  VertexArray.h
src/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLBuffer.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLFramebuffer.hpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLRenderAPI.hpp  OpenGLRenderContext.cpp  OpenGLRenderContext.hpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexArray.hpp
src/OpenGL/glad/: CMakeLists.txt  glad.c
src/OpenGL/glad/glad/: glad.h
src/Universal/: Font.cpp  Window.cpp
src/Vulkan/: Vulkan.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDevice.cpp  VulkanFence.cpp  VulkanFence.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanRenderContext.cpp  VulkanRenderContext.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSwapchain.cpp  VulkanUtils.cpp  VulkanUtils.hpp
src/agi_imgui/: CMakeLists.txt  ImGuiLayer.hpp
src/agi_imgui/imgui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/ext/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.hpp  Reflection.cpp  Window.cpp
src/ext/imgui/: imconfig.h
src/ext/imgui/backends/: imgui_impl_glfw.cpp
src/glad/include/glad/: glad.h
